Replace .collect(Collectors.toList()) with .toList() in BookController
Where we only fetch lists, it is better to make them unmodifiable.